# blinx_robot_arm_control

./: .gitignore  BLinx_Robot_Arm_ui.py  BLinx_Robot_Arm_ui.ui  LICENSE.rtf  LICENSE.txt  README.md  blinx_logo.py  blinx_logo.qrc  cliff.toml  main.py  no-nuitka-requirements.txt  pyproject.toml  requirements.txt  robot_arm_control_designer.drawio  test_msfluentwindow.py
UI/: BLinx_Robot_Arm_v1.0.ui  BLinx_Robot_Arm_v2.0.ui
app/: BLinx_Robot_Arm_ui.py  blinx_logo_rc.py  command_page.py  connect_page.py  teach_page.py
assets/: blinx_logo.qrc  blinx_logo_rc.py
common/: blinx_robot_module.py  check_tools.py  settings.py  socket_client.py  work_threads.py
componets/: message_box.py  table_view_control.py
config/: .gitignore  robot_dh_parameters.yaml  robot_mdh_parameters.yaml  v3.0.0_MDH.yml
docs/: .$上位机核心逻辑设计.drawio.bkp  .$机械臂表演流程.drawio.bkp  .$核心逻辑设计.drawio.bkp  robot_arm_control_designer.drawio  上位机核心逻辑设计.drawio  机械臂 API 接口.txt  机械臂表演流程.drawio  核心逻辑设计.drawio  桌面型六轴机械臂参数规格.md  软件最终用户许可协议.md
test/: mirobot.py  socket_client.py  socket_server.py  table_action.py  tabwidget_test.py  test
tests/: 1号机-新字.json  1号机龙字.json  2号机-年字.json  3号机好字.json  blinx_fkine.py  button_long_press.py  fk_data.dir  mirobot.py  tabwidget_test.py  test_coloum_combo_box.py  test_drag_table.py  test_fk_ik.py  test_ik_fk_value.py  test_long_press_button.py  test_p2.py  test_thread_signal.py  thread_test.py  全新定点舞蹈机械臂动作.json  动作1.json  好字.json  定点动作3.json  定点机械手舞蹈动作.json  舞蹈动作.json  龙字.json
ui/: BLinx_Robot_Arm_ui.ui  BLinx_Robot_Arm_ui_v4.1.0.ui  command_page.ui  connect_page.ui  (+1 more)
(+3 files in other folders)
