[project]
name = "blinx_robot_arm_control"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "任伟明", email = "corejk@163.com"},
]
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "colorama==0.4.6",
    "darkdetect==0.8.0",
    "loguru==0.7.2",
    "numpy @ file:///${PROJECT_ROOT}/numpy-1.22.4%2Bvanilla-cp38-cp38-win_amd64.whl",
    "Pypubsub==4.0.3",
    "pyserial==3.5",
    "PySide6==6.6.2",
    "PySide6-Fluent-Widgets==1.5.7",
    "PySide6-Addons==6.6.2",
    "PySide6-Essentials==6.6.2",
    "PySideSix-Frameless-Window==0.3.12",
    "pywin32==306",
    "shiboken6==6.6.2",
    "simplejson==3.19.2",
    "win32-setctime==1.1.0",
    "zstandard==0.22.0",
    "file:///${PROJECT_ROOT}/numpy-1.22.4%2Bvanilla-cp38-cp38-win_amd64.whl",
]
requires-python = "<3.13,>=3.8"

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
build = [
    "nuitka==1.8.6",
]